manifests/ingress/ingress-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31050
    - name: https
      port: 443
      targetPort: 443
      nodePort: 31241
